--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.scss
@@ -1,3 +1,17 @@
 .btn-table.min-w-11em {
   min-width: 11em;
 }
+
+.slect-table-contain {
+  width: 9em;
+}
+
+.ruta-url {
+  max-width: 20em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+  color: #174193;
+  text-decoration: underline;
+}
