--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="fasePreConstruccionFormaPagoCodigo !== undefined">
+<section *ngIf="listaCriterios.length > 0">
     <div style="margin-top: 1em;">
         <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
             A continuación encontrará los tipos de pago asociados a la factura para que usted determine la distribución de los descuentos
