--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -86,7 +86,7 @@
                                                         </div>
                                                         <div class="col">
                                                             <mat-form-field class="select-width">
-                                                                <mat-select formControlName="nombreAportante" required (ngModelChange)="getListaFuenteRecursos( $event, i, j, k ); addDescuentos( $event )">
+                                                                <mat-select formControlName="nombreAportante" required (ngModelChange)="getListaFuenteRecursos( $event, i, j, k )">
                                                                     <mat-option *ngFor="let aportante of aportante.get( 'listaNombreAportantes' ).value" [value]="aportante">
                                                                         {{ aportante.nombreAportante }}
                                                                     </mat-option>
@@ -118,7 +118,7 @@
                                                         <div class="col">
                                                             <mat-form-field class="select-width">
                                                                 <mat-select formControlName="fuenteRecursos" required>
-                                                                    <mat-option *ngFor="let fuente of aportante.get( 'fuenteDeRecursos' ).value" [value]="fuente.fuenteRecursosCodigo">
+                                                                    <mat-option *ngFor="let fuente of aportante.get( 'fuenteDeRecursos' ).value" [value]="fuente">
                                                                         {{ fuente.nombre }}
                                                                     </mat-option>
                                                                 </mat-select>
@@ -211,20 +211,20 @@
                                 <p><strong>Valor facturado por el concepto para el aportante después del descuento: </strong>$ 7.970.000</p>
                             </ng-template>
 
-                            <div *ngIf="descuento.length > 0">
-                                <div *ngFor="let desc of descuento.controls; index as indexDescuento">
+                            <div>
+                                <div>
 
-                                    <h2 class="card-subTitle">Descuentos Dirección financiera - {{ desc.get( 'nombreAportante' ).value }}</h2>
+                                    <h2 class="card-subTitle">Descuentos Dirección financiera</h2>
 
-                                    <div [formGroup]="desc">
+                                    <div [formGroup]="getConceptos( i ).controls[ j ].get( 'descuento' )">
                                         <div class="row">
                                             <div class="col-md-8">
                                                 <div class="row">
                                                     <div class="pr-1">
                                                         <label class="label-left" for="aplicaDescuentos" [ngClass]="{
                                                             'color-secondaryColor':
-                                                              (desc.get('aplicaDescuentos').invalid && desc.get('aplicaDescuentos').touched) ||
-                                                              (desc.get('aplicaDescuentos').invalid && estaEditando)
+                                                              (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').touched) ||
+                                                              (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && estaEditando)
                                                           }">¿Se requieren aplicar descuentos sobre el concepto de pago?</label>
                                                     </div>
                                                     <div class="col">
@@ -239,20 +239,20 @@
                                                             alt="este campo es requerido" [matTooltipPosition]="'above'"
                                                             matTooltip="Debe ingresar la información en el campo para continuar"
                                                             matTooltipClass="info-tooltip" *ngIf="
-                                                            (desc.get('aplicaDescuentos').invalid && desc.get('aplicaDescuentos').touched) ||
-                                                              (desc.get('aplicaDescuentos').invalid && estaEditando)
+                                                            (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').touched) ||
+                                                              (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && estaEditando)
                                                           " />
                                                     </span>
                                                 </div>
                                             </div>
                                         </div>
 
-                                        <div class="d-flex mt-1em animatedDown" *ngIf="desc.get('aplicaDescuentos').value === true">
+                                        <div class="d-flex mt-1em animatedDown" *ngIf="getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').value === true">
                                             <label class="mr-label" class="label-left"
                                             [ngClass]="{
                                                 'color-secondaryColor':
-                                                  (desc.get('numeroDescuentos').invalid && desc.get('numeroDescuentos').touched) ||
-                                                  (desc.get('numeroDescuentos').invalid && estaEditando)
+                                                  (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').touched) ||
+                                                  (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && estaEditando)
                                               }"><b>¿Cuántos descuentos se aplican sobre el concepto de
                                                     pago?</b></label>
                                             <div class="col d-flex">
@@ -263,7 +263,7 @@
                                                             (keypress)="validateNumberKeypress($event)"
                                                             #numeroDescuento
                                                             onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                                                            (ngModelChange)="getCantidadDescuentos( $event, indexDescuento )"
+                                                            (ngModelChange)="getCantidadDescuentos( $event, i, j )"
                                                             formControlName="numeroDescuentos"
                                                             required>
                                                 </mat-form-field>
@@ -278,17 +278,17 @@
                                                   matTooltip="Debe ingresar la información en el campo para continuar"
                                                   matTooltipClass="info-tooltip"
                                                   *ngIf="
-                                                    (desc.get('numeroDescuentos').invalid && desc.get('numeroDescuentos').touched) ||
-                                                    (desc.get('numeroDescuentos').invalid && estaEditando)
+                                                    (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').touched) ||
+                                                    (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && estaEditando)
                                                   "
                                                 />
                                               </span>
                                         </div>
 
-                                        <div class="animatedDown" formArrayName="descuentos" *ngIf="getDescuentos( indexDescuento ).length > 0">
-                                            <div *ngFor="let discount of getDescuentos( indexDescuento ).controls; index as jIndexDescuento">
+                                        <div class="animatedDown" formArrayName="descuentos" *ngIf="getDescuentos( i, j ).length > 0">
+                                            <div *ngFor="let discount of getDescuentos( i, j ).controls; index as k">
                                                 <mat-card-title class="header-card--text sub-text">
-                                                    Descuento {{ jIndexDescuento + 1 }}
+                                                    Descuento {{ k + 1 }}
                                                 </mat-card-title>
                                                 <div [formGroup]="discount">
                                                     <div class="row">
@@ -334,8 +334,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="text-right" *ngIf="getDescuentos( indexDescuento ).length > 1">
-                                                        <button mat-button color="warn" type="button" class="btn-eliminar" (click)="deleteDescuento( indexDescuento, jIndexDescuento )">
+                                                    <div class="text-right" *ngIf="getDescuentos( i, j ).length > 1">
+                                                        <button mat-button color="warn" type="button" class="btn-eliminar" (click)="deleteDescuento( i, j, k )">
                                                             <img src="assets/img/icon/menos.svg" alt="Eliminar vigencia">
                                                             Eliminar descuento
                                                         </button>
