--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -2,7 +2,7 @@
     <mat-accordion *ngIf="descuentos.length > 0 && criteriosArray.length > 0">
         <mat-expansion-panel class="expansion-style sub-expansion-black" formArrayName="descuentos" *ngFor="let descuento of descuentos.controls; index as i">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                <mat-panel-title class="expansion-style--title" [ngClass]="descuento.get( 'estadoSemaforo' ).value">
                     Descuento {{ i + 1 }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
