--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
@@ -43,7 +43,8 @@
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" class="btn-table" (click)="enviarAComite(element.defensaJudicialId)"
+                <button mat-raised-button color="accent" class="btn-table"
+                    (click)="enviarAComite(element.defensaJudicialId)"
                     *ngIf="element.estadoProcesoCodigo === '1' && element.vaAProcesoJudicial && element.registroCompletoNombre=='Completo'">
                     Enviar proceso a comité técnico
                 </button>
@@ -52,28 +53,29 @@
                     (click)="this.editProceso(element.defensaJudicialId)">
                     Ver detalle/Editar
                 </button>
-                <button mat-raised-button color="accent" class="btn-table"
-                (click)="eliminar(element.defensaJudicialId)"
+                <button mat-raised-button color="accent" class="btn-table" (click)="eliminar(element.defensaJudicialId)"
                     *ngIf="element.estadoProcesoCodigo === '1'">
                     Eliminar
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
-                (click)="cerrarProceso(element.defensaJudicialId)"
-                    *ngIf="element.estadoProcesoCodigo === '9'  ">
+                    (click)="cerrarProceso(element.defensaJudicialId)" *ngIf="element.estadoProcesoCodigo === '9'  ">
                     Cerrar proceso
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
-                    *ngIf="(element.vaAProcesoJudicial && element.estadoProcesoCodigo === '6') || (!element.vaAProcesoJudicial && (element.estadoProcesoCodigo === '1' || element.estadoProcesoCodigo === '3'  || element.estadoProcesoCodigo === '6')) && element.registroCompletoNombre=='Completo'"
+                    *ngIf="(element.vaAProcesoJudicial && element.estadoProcesoCodigo === '6') || (!element.vaAProcesoJudicial && (element.estadoProcesoCodigo === '1' || element.estadoProcesoCodigo === '3'  || element.estadoProcesoCodigo === '6')) && element.registroCompletoNombre=='Completo'
+                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '6' && element.registroCompletoNombre=='Completo')"
                     (click)="this.actualizarProceso(element.defensaJudicialId)">
                     Actualizar proceso
                 </button>
-                <button mat-raised-button color="accent" class="btn-table" (click)="GetPlantillaDefensaJudicial(element.defensaJudicialId)"
-                    *ngIf="(element.estadoProcesoCodigo === '2') && element.registroCompletoNombre=='Completo'">
+                <button mat-raised-button color="accent" class="btn-table"
+                    (click)="GetPlantillaDefensaJudicial(element.defensaJudicialId)"
+                    *ngIf="(element.estadoProcesoCodigo === '2' && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '6' && element.registroCompletoNombre=='Completo')
+                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo')">
                     Descargar ficha de estudio
                 </button>
-                <button mat-raised-button color="accent" class="btn-table" 
-                *ngIf="element.estadoProcesoCodigo === '5' || element.estadoProcesoCodigo === '8' || element.estadoProcesoCodigo === '10'"
-                (click)="GetPlantillaDefensaJudicial(element.defensaJudicialId)">
+                <button mat-raised-button color="accent" class="btn-table"
+                    *ngIf="element.estadoProcesoCodigo === '5' || element.estadoProcesoCodigo === '8' || element.estadoProcesoCodigo === '10'"
+                    (click)="GetPlantillaDefensaJudicial(element.defensaJudicialId)">
                     Descargar proceso de defensa judicial
                 </button>
             </td>
